# newscli

./: Cargo.toml
src/: main.rs
