[package]
name = "newscli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.88"
ureq = {version="2.1.1", features = ["json"]}
thiserror = "1.0.26"
url = { version = "2", features = ["serde"] }
reqwest = {version = "0.11.4", features = ["json"], optional = true }

